test/fail/fail_1.prsl
// RUN: (%edir/prsl --codegen %s 2>&1) | filecheck %s
// RUN: (%edir/prsl %s 2>&1) | filecheck %s
// CHECK: fail_1.prsl:5:7: error: at 'n': Attempt to access an undef variable

while(n-- >0)
{
tmp = fst;
snd = (fst=snd) + tmp;
}

print snd;